Adiciona requisito 2 e corrige erro no requisito 1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Trybewarts</title>
 </head>
 <body>
-<header>Isso é uma header</header>
+<header>
+    <div class="header">
+        <img src="images/trybewarts-header-logo.svg" class="trybewarts-header-logo">
+    </div>
+</header>
 </body>
 </html>
