--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 <header>
     <div class="header">
         <img src="images/trybewarts-header-logo.svg" class="trybewarts-header-logo">
+        <div>
+            <form class="trybewarts-login">
+                <input type="email" name="email" placeholder="Email">
+                <input type="password" name="password" placeholder="Senha">
+                <button>Entrar</button>
+            </form>
+
+        </div>
+
+        </div>
     </div>
 </header>
 </body>
