--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <div class="header">
-        <img src="images/trybewarts-header-logo.svg" class="trybewarts-header-logo">
+        <img src="images/trybewarts-header-logo.svg" class="trybewarts-header-logo" alt="Logo Trybewarts">
     </div>
 </header>
 </body>
