--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
         <img src="images/trybewarts-header-logo.svg" class="trybewarts-header-logo" alt="Logo Trybewarts" width="128" height="128">
         <div>
             <form class="trybewarts-login">
-                <input type="email" name="email" placeholder="Email">
-                <input type="password" name="password" placeholder="Senha">
-                <button>Entrar</button>
+                <input type="email" name="email" placeholder="Email" id="email">
+                <input type="password" name="password" placeholder="Senha" id="senha">
+                <button id="login">Entrar</button>
             </form>
         </div>
     </div>
 </header>
+<script src="script.js"></script>
 </body>
 </html>
