adicionando titulo no requisito 4

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <header>
     <div class="header">
         <img src="images/trybewarts-header-logo.svg" class="trybewarts-header-logo" alt="Logo Trybewarts" width="128" height="128">
+        <h1 id="trybewarts-header-title">Trybewarts</h1>
         <div>
             <form class="trybewarts-login">
                 <input type="email" name="email" placeholder="Email" id="email">
