Adiciona até requisito 7

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             </form>
         </div>
     </div>
+    <div id="forms-e-logo">
+    <main>
+        <form id="evaluation-form"></form>
+    </main>
+    <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
+    </div>
 </header>
 <script src="script.js"></script>
 </body>
