--- a/index.html
+++ b/index.html
@@ -3,38 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <title>Trybewarts</title>
 </head>
 
 <body>
-    <header>
-        <div class="header">
-            <img src="images/trybewarts-header-logo.svg" class="trybewarts-header-logo" alt="Logo Trybewarts"
-                width="128" height="128">
-            <h1 id="trybewarts-header-title">Trybewarts</h1>
-            <div>
-                <form class="trybewarts-login">
-                    <input type="email" name="email" placeholder="Email" id="email">
-                    <input type="password" name="password" placeholder="Senha" id="senha">
-                    <button id="login">Entrar</button>
-                </form>
-            </div>
+<header>
+    <div class="header">
+        <img src="images/trybewarts-header-logo.svg" class="trybewarts-header-logo" alt="Logo Trybewarts"
+             width="128" height="128">
+        <h1 id="trybewarts-header-title">Trybewarts</h1>
+        <div>
+            <form class="trybewarts-login">
+                <input type="email" name="email" placeholder="Email" id="email">
+                <input type="password" name="password" placeholder="Senha" id="senha">
+                <button id="login">Entrar</button>
+            </form>
         </div>
-        <div id="forms-e-logo">
-            <main>
-                <form id="evaluation-form">
-                    <input type="text" placeholder="Nome" id="input-name">
-                    <input type="text" placeholder="Sobrenome" id="inout-lastname">
-                    <input type="email" placeholder="Email" id="input-email">
-                </form>
-            </main>
-            <img id="trybewtarts-forms-logo" src="images/trybewarts-colored.svg">
-        </div>
-    </header>
-    <script src="script.js"></script>
+    </div>
+    <main>
+        <form id="evaluation-form">
+            <input type="text" placeholder="Nome" id="input-name">
+            <input type="text" placeholder="Sobrenome" id="input-lastname">
+            <input type="email" placeholder="Email" id="input-email">
+            <select id="house">
+                <option id="gitnoria-house" value="Gitnória">Gitnória</option>
+                <option id="reactpuff-house" value="Reactpuff">Reactpuff</option>
+                <option id="corvinode-house" value="Corvinode">Corvinode</option>
+                <option id="pytherina-house" value="Pytherina">Pytherina</option>
+            </select>
+        </form>
+        <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" height="500px">
+    </main>
+</header>
+<script src="script.js"></script>
 </body>
 
 </html>
