Resolve conflito lint e verificação do textarea

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         <div>
             <label for="textarea" class="textarea">
-                <b>Deixe seu comentário</b></label>
+                <b>Deixe seu comentário:</b></label>
             <textarea name="textarea" id="textarea" cols="30" rows="10" maxlength="500"></textarea>
         </div>
         <br>
