--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             </form>
         </div>
     </div>
-    </div>
 </header>
 <main>
     <form id="evaluation-form" class="form-container">
@@ -113,7 +112,11 @@
     </form>
     <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" height="500px" alt="Logo Colorida">
 </main>
+<footer>
+    <div>
+        <p>Direitos reservados à Trybewarts©
+    </div>
+</footer>
 <script src="script.js"></script>
 </body>
-
 </html>
