--- a/index.html
+++ b/index.html
@@ -3,120 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <title>Trybewarts</title>
 </head>
 
 <body>
-<header>
-    <div class="header">
-        <img src="images/trybewarts-header-logo.svg" class="trybewarts-header-logo" alt="Logo Trybewarts"
-             width="128" height="128">
-        <h1 id="trybewarts-header-title">Trybewarts</h1>
-        <div>
-            <form class="trybewarts-login">
-                <input type="email" name="email" placeholder="Email" id="email">
-                <input type="password" name="password" placeholder="Senha" id="senha">
-                <button id="login">Entrar</button>
-            </form>
-        </div>
-    </div>
-</header>
-<main>
-    <form id="evaluation-form" class="form-container">
-        <div id="nomeSobrenome">
-            <input type="text" placeholder="Nome" id="input-name">
-            <input type="text" placeholder="Sobrenome" id="input-lastname">
-        </div>
-        <div id="emailHouse">
-            <input type="email" placeholder="Email" id="input-email">
-            <select id="house">
-                <option id="gitnoria-house" value="Gitnória">Gitnória</option>
-                <option id="reactpuff-house" value="Reactpuff">Reactpuff</option>
-                <option id="corvinode-house" value="Corvinode">Corvinode</option>
-                <option id="pytherina-house" value="Pytherina">Pytherina</option>
-            </select>
-        </div>
-        <div id="radio-container">
-            <label id="label-family"><b>Qual sua família?</b></label>
+    <header>
+        <div class="header">
+            <img src="images/trybewarts-header-logo.svg" class="trybewarts-header-logo" alt="Logo Trybewarts"
+                width="128" height="128">
+            <h1 id="trybewarts-header-title">Trybewarts</h1>
             <div>
-                <input type="radio" name="family" value="Frontend" id="Frontend">
-                <label for="Frontend"><em>Frontend</em></label>
-            </div>
-            <div>
-                <input type="radio" name="family" value="Backend" id="Backend">
-                <label for="Backend"><em>Backend</em></label>
-            </div>
-            <div>
-                <input type="radio" name="family" value="FullStack" id="FullStack">
-                <label for="FullStack"><em>FullStack</em></label>
+                <form class="trybewarts-login">
+                    <input type="email" name="email" placeholder="Email" id="email">
+                    <input type="password" name="password" placeholder="Senha" id="senha">
+                    <button id="login">Entrar</button>
+                </form>
             </div>
         </div>
-        <div id="checkbox-container">
-            <p id="label-content"><b>Qual conteúdo você está com mais vontade de aprender?</b></p>
-            <div>
-                <input type="checkbox" class="subject" value="HoFs" id="HoFs">
-                <label for="HoFs"><em>HoFs</em></label>
+    </header>
+    <main>
+        <form id="evaluation-form" class="form-container">
+            <div id="nomeSobrenome">
+                <input type="text" placeholder="Nome" id="input-name">
+                <input type="text" placeholder="Sobrenome" id="input-lastname">
+            </div>
+            <div id="emailHouse">
+                <input type="email" placeholder="Email" id="input-email">
+                <select id="house">
+                    <option id="gitnoria-house" value="Gitnória">Gitnória</option>
+                    <option id="reactpuff-house" value="Reactpuff">Reactpuff</option>
+                    <option id="corvinode-house" value="Corvinode">Corvinode</option>
+                    <option id="pytherina-house" value="Pytherina">Pytherina</option>
+                </select>
+            </div>
+            <div id="radio-container">
+                <label id="label-family"><b>Qual sua família?</b></label>
+                <div>
+                    <input type="radio" name="family" value="Frontend" id="Frontend">
+                    <label for="Frontend"><em>Frontend</em></label>
+                </div>
+                <div>
+                    <input type="radio" name="family" value="Backend" id="Backend">
+                    <label for="Backend"><em>Backend</em></label>
+                </div>
+                <div>
+                    <input type="radio" name="family" value="FullStack" id="FullStack">
+                    <label for="FullStack"><em>FullStack</em></label>
+                </div>
+            </div>
+            <div id="checkbox-container">
+                <p id="label-content"><b>Qual conteúdo você está com mais vontade de aprender?</b></p>
+                <div>
+                    <input type="checkbox" class="subject" value="HoFs" id="HoFs">
+                    <label for="HoFs"><em>HoFs</em></label>
+                </div>
+                <div>
+                    <input type="checkbox" class="subject" value="Jest" id="Jest">
+                    <label for="Jest"><em>Jest</em></label>
+                </div>
+                <div>
+                    <input type="checkbox" class="subject" value="Promises" id="Promises">
+                    <label for="Promises"><em>Promises</em></label>
+                </div>
+                <div>
+                    <input type="checkbox" class="subject" value="React" id="React">
+                    <label for="React"><em>React</em></label>
+                </div>
+                <div>
+                    <input type="checkbox" class="subject" value="SQL" id="SQL">
+                    <label for="SQL"><em>SQL</em></label>
+                </div>
+                <div>
+                    <input type="checkbox" class="subject" value="Python" id="Phyton">
+                    <label for="Phyton"><em>Python</em></label>
+                </div>
+            </div>
+            <div class="avaliacao">
+                <label id="label-rate">
+                    <b>Como você avalia a Trybewarts?</b>
+                    <br>
+                    <input type="radio" name="rate" value="1">1
+                    <input type="radio" name="rate" value="2">2
+                    <input type="radio" name="rate" value="3">3
+                    <input type="radio" name="rate" value="4">4
+                    <input type="radio" name="rate" value="5">5
+                    <input type="radio" name="rate" value="6">6
+                    <input type="radio" name="rate" value="7">7
+                    <input type="radio" name="rate" value="8">8
+                    <input type="radio" name="rate" value="9">9
+                    <input type="radio" name="rate" value="10">10
+                </label>
             </div>
             <div>
-                <input type="checkbox" class="subject" value="Jest" id="Jest">
-                <label for="Jest"><em>Jest</em></label>
+                <label for="textarea" class="textarea">
+                    <b>Deixe seu comentário:</b></label>
+                <textarea name="textarea" id="textarea" cols="30" rows="10" maxlength="500"></textarea>
+                <p id="counter">500</p>
             </div>
-            <div>
-                <input type="checkbox" class="subject" value="Promises" id="Promises">
-                <label for="Promises"><em>Promises</em></label>
-            </div>
-            <div>
-                <input type="checkbox" class="subject" value="React" id="React">
-                <label for="React"><em>React</em></label>
-            </div>
-            <div>
-                <input type="checkbox" class="subject" value="SQL" id="SQL">
-                <label for="SQL"><em>SQL</em></label>
-            </div>
-            <div>
-                <input type="checkbox" class="subject" value="Python" id="Phyton">
-                <label for="Phyton"><em>Python</em></label>
-            </div>
-        </div>
-        <div class="avaliacao">
-            <label id="label-rate">
-                <b>Como você avalia a Trybewarts?</b>
-                <br>
-                <input type="radio" name="rate" value="1">1
-                <input type="radio" name="rate" value="2">2
-                <input type="radio" name="rate" value="3">3
-                <input type="radio" name="rate" value="4">4
-                <input type="radio" name="rate" value="5">5
-                <input type="radio" name="rate" value="6">6
-                <input type="radio" name="rate" value="7">7
-                <input type="radio" name="rate" value="8">8
-                <input type="radio" name="rate" value="9">9
-                <input type="radio" name="rate" value="10">10
+            <br>
+            <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?
+                <input type="checkbox" name="agreement" id="agreement">
             </label>
-        </div>
+            <div>
+                <button type="submit" id="submit-btn" disabled>Enviar</button>
+            </div>
+        </form>
+        <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" height="500px" alt="Logo Colorida">
+        <form action="" id="form-data"></form>
+    </main>
+    <footer>
         <div>
-            <label for="textarea" class="textarea">
-                <b>Deixe seu comentário:</b></label>
-            <textarea name="textarea" id="textarea" cols="30" rows="10" maxlength="500"></textarea>
+            <p>Direitos reservados à Trybewarts©
         </div>
-        <br>
-        <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?
-            <input type="checkbox" name="agreement" id="agreement">
-        </label>
-        <div>
-            <button type="submit" id="submit-btn" disabled>Enviar</button>
-        </div>
-    </form>
-    <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" height="500px" alt="Logo Colorida">
-</main>
-<footer>
-    <div>
-        <p>Direitos reservados à Trybewarts©
-    </div>
-</footer>
-<script src="script.js"></script>
+    </footer>
+    <script src="script.js"></script>
 </body>
+
 </html>
